--- a/index.html
+++ b/index.html
@@ -191,9 +191,12 @@
                             <li>Maps finger distance to audio levels</li>
                         </ul>
                         <div class="project-links">
-                            <a href="https://github.com/Man-av/Gesture-Volume-Control" target="_blank" class="project-link">
+                            <a href="https://app.powerbi.com/view?r=eyJrIjoiYmI0NDgyYzAtNTk2YS00NTAxLTkzYmUtODM2OTk0ODUxNDlhIiwidCI6ImYwYTdmMzFiLWJlNDgtNGM2OS1iMTVmLThhMzZhOGEwYzNiMyJ9&pageName=a64b7470034ca0e298d0" target="_blank" class="project-link">
                                 <i class="fab fa-github"></i> View Project
                             </a>
+                            <a href="https://github.com/Man-av/Gesture-Volume-Control" target="_blank" class="project-link">
+                                <i class="fab fa-github"></i> Live DashBoard
+                            </a> 
                         </div>
                     </div>
                 </div>
@@ -311,3 +314,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
