--- a/index.html
+++ b/index.html
@@ -191,11 +191,8 @@
                             <li>Maps finger distance to audio levels</li>
                         </ul>
                         <div class="project-links">
-                            <a href="https://app.powerbi.com/view?r=eyJrIjoiYmI0NDgyYzAtNTk2YS00NTAxLTkzYmUtODM2OTk0ODUxNDlhIiwidCI6ImYwYTdmMzFiLWJlNDgtNGM2OS1iMTVmLThhMzZhOGEwYzNiMyJ9&pageName=a64b7470034ca0e298d0" target="_blank" class="project-link">
-                                <i class="fab fa-github"></i> View Project
-                            </a>
                             <a href="https://github.com/Man-av/Gesture-Volume-Control" target="_blank" class="project-link">
-                                <i class="fab fa-github"></i> Live DashBoard
+                                <i class="fab fa-github"></i> View Project
                             </a> 
                         </div>
                     </div>
@@ -216,6 +213,9 @@
                             <a href="https://github.com/Man-av/customer-sales-analysis" target="_blank" class="project-link">
                                 <i class="fab fa-github"></i> View Project
                             </a>
+                            <a href="https://app.powerbi.com/view?r=eyJrIjoiYmI0NDgyYzAtNTk2YS00NTAxLTkzYmUtODM2OTk0ODUxNDlhIiwidCI6ImYwYTdmMzFiLWJlNDgtNGM2OS1iMTVmLThhMzZhOGEwYzNiMyJ9&pageName=a64b7470034ca0e298d0" target="_blank" class="project-link">
+                                <i class="fab fa-github"></i> Live Dashoard
+                            </a>                            
                         </div>
                     </div>
                 </div>
@@ -314,4 +314,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
