--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                                 <i class="fab fa-github"></i> View Project
                             </a>
                             <a href="https://app.powerbi.com/view?r=eyJrIjoiYmI0NDgyYzAtNTk2YS00NTAxLTkzYmUtODM2OTk0ODUxNDlhIiwidCI6ImYwYTdmMzFiLWJlNDgtNGM2OS1iMTVmLThhMzZhOGEwYzNiMyJ9&pageName=a64b7470034ca0e298d0" target="_blank" class="project-link">
-                                <i class="fab fa-github"></i> Live Dashoard
+                                <i class="fa-solid fa-chart-simple"></i> Live Dashoard
                             </a>                            
                         </div>
                     </div>
@@ -314,5 +314,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
