--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </p>
                     <div class="hero-buttons">
                         <a href="#projects" class="btn btn-primary">View My Work</a>
-                        <a href="resume.pdf" download class="btn btn-resume">
+                        <a href="manav sharma resume.pdf" download class="btn btn-resume">
                             <i class="fas fa-download"></i> Download Resume
                         </a>
                     </div>
@@ -314,6 +314,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
